# tiny_lib

./: .clang-format  .clang-tidy  .gitignore  AUTHORS  CMakeLists.txt  LICENSE  Makefile  README.md  make.bat
cmake/: build_configure.cmake  build_initialize.cmake  compiler_flags.cmake  external_libs.cmake  target.cmake  target_test.cmake
cmake/module/: FindClangTidy.cmake
cmake/platform/: platform_apple.cmake  platform_unix.cmake  platform_unix_common.cmake  platform_win32.cmake  platform_win32_msvc.cmake
internal/: CMakeLists.txt
internal/tiny_lib/: CMakeLists.txt
internal/tiny_lib/unittest/: CMakeLists.txt  mock.h  test.h
internal/tiny_lib/unittest/internal/: test-internal.h  test.cc  test_main.cc  unittest_test.cc
tl_audio_wav/: CMakeLists.txt  tl_audio_wav_reader.h  tl_audio_wav_writer.h
tl_audio_wav/test/: tl_audio_wav_reader_test.cc  tl_audio_wav_test_data.h  tl_audio_wav_writer_test.cc
tl_build_config/: CMakeLists.txt  tl_build_config.h
tl_build_config/test/: tl_build_config_test.cc
tl_container/: CMakeLists.txt  tl_static_vector.h
tl_container/test/: tl_static_vector_test.cc
tl_convert/: CMakeLists.txt  tl_convert.h
tl_convert/test/: tl_convert_test.cc
tl_functional/: CMakeLists.txt  tl_callback.h
tl_functional/test/: tl_callback_test.cc
tl_image_bmp/: CMakeLists.txt  tl_image_bmp_reader.h  tl_image_bmp_writer.h
tl_image_bmp/test/: tl_image_bmp_reader_test.cc  tl_image_bmp_writer_test.cc
tl_io/: CMakeLists.txt  tl_io_file.h
tl_io/test/: tl_io_file_test.cc
tl_io/test/data/: file.txt  要らない.txt
tl_log/: CMakeLists.txt  tl_log.h
tl_log/test/: tl_log_test.cc
tl_result/: CMakeLists.txt  tl_result.h
tl_result/test/: tl_result_test.cc
tl_string/: CMakeLists.txt  tl_cstring_view.h  tl_static_string.h  tl_string_portable.h
tl_string/test/: tl_cstring_view_test.cc  tl_static_string_test.cc  tl_string_portable_test.cc
tl_temp/: CMakeLists.txt  tl_temp_dir.h  tl_temp_file.h
tl_temp/test/: tl_temp_dir_test.cc  tl_temp_file_test.cc
